@@ -1,4 +1,4 @@
-document.documentURI = file:///Users/abarth/git/webkit/LayoutTests/fast/dom/documenturi-can-hold-arbitrary-string.html
+normalizeURL(document.documentURI) = LayoutTests/fast/dom/documenturi-can-hold-arbitrary-string.html
 Assigning to documentURI
 document.documentURI = PASS: documentURI can hold an arbitrary string.
 
