@@ -2,10 +2,14 @@
 <body>
 <pre>
 <script>
+function normalizeURL(url) {
+  return url.substring(url.lastIndexOf('LayoutTests'));
+}
+
 if (window.layoutTestController)
   layoutTestController.dumpAsText();
 
-document.writeln('document.documentURI = ' + document.documentURI);
+document.writeln('normalizeURL(document.documentURI) = ' + normalizeURL(document.documentURI));
 document.writeln('Assigning to documentURI');
 document.documentURI = 'PASS: documentURI can hold an arbitrary string.';
 document.writeln('document.documentURI = ' + document.documentURI);
