@@ -1,2 +1,2 @@
 The document.documentURI property should not be affected by the <base> tag.
-file:///Users/abarth/git/webkit/LayoutTests/fast/dom/documenturi-not-affected-by-base-tag.html
+LayoutTests/fast/dom/documenturi-not-affected-by-base-tag.html
