@@ -3,11 +3,15 @@
 <script>
 if (window.layoutTestController)
   layoutTestController.dumpAsText();
+
+function normalizeURL(url) {
+  return url.substring(url.lastIndexOf('LayoutTests'));
+}
 </script>
 <base href="http://fail.example.com/">
 </head>
 <body>
 <div>The document.documentURI property should not be affected by the &lt;base&gt; tag.</div>
-<script>document.write(document.documentURI);</script>
+<script>document.write(normalizeURL(document.documentURI));</script>
 </body>
 </html>
